crates/strider-analyze/tests/snapshots/v3__ppc64le__patterns__loop_with_invariant_load.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "3" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v4" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "21" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "18" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "28" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "31" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "33" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v34" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v34" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "35" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "39" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "7" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "33" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "48" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "48" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "48" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "50" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "14" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "54" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "54" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "54" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "42" -> "54" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "56" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "56" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "42" -> "56" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "61" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "64" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "64" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "63" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "71" -> "69" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "71" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "12" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "74" -> "72" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "74" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "74" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "74" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "75" -> "74" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "80" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "73" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Sless\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
